<resources>
    <string name="app_name">Tema3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="set_date">Set Date</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set_time">Set Time</string>
    <string name="your_date">Your Date</string>
    <string name="your_time">Your Time</string>
</resources>